# discord-bot-test-suite

./: .cspell.json  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  cspell.json  docker-compose.pubsub.yml  docker-compose.test.yml
.beads/: issues.jsonl
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/workflows/: benchmark-tool-ci.yml  cloudrun-benchmark.yml  cloudrun-cleanup.yml  contract-tests-lint.yml  dependabot-auto-merge.yml  dependabot-rebase.yml  lint.yml  pr-auto-update.yml  service-cpp-drogon.yml  service-csharp-aspnet-native.yml  service-csharp-aspnet.yml  service-go-gin.yml  service-java-micronaut.yml  service-java-quarkus-native.yml  service-java-quarkus.yml  service-java-spring.yml  service-java-spring2.yml  service-java-spring3.yml  service-java-spring4.yml  service-kotlin-ktor.yml  service-node-express.yml  service-php-laravel.yml  service-python-django.yml  service-python-flask.yml  service-ruby-rails.yml  service-rust-actix.yml  service-scala-play.yml  service-typescript-fastify.yml
docs/: CONTRACT-TESTS.md  DEPENDABOT.md  GOAL.md  LINTING.md  PRE_COMMIT_PERFORMANCE.md  PUBSUB-SCHEMA.md  benchmark-summary.md  cpp-static-linking.md
docs/architecture/: CONFIG-EXTENSIBILITY.md  DECISION-SUMMARY.md  MULTI-REPO-PROPOSAL.md  PERF-AGENT-SPEC.md  PERF-MANAGER-SPEC.md
docs/container-optimization/: README.md  cpp.md  csharp.md  go.md  java-jvm.md  java-native.md  node.md  php.md  python.md  ruby.md  rust.md
sandbox-setup-template/: .gitignore  README.md
sandbox-setup-template/compose/: .env.example  docker-compose.yml
sandbox-setup-template/config/: claude-settings.json  ghostty-config.template  ssh-config.template  versions.env
sandbox-setup-template/decisions/: 0000-template.md  0001-agent-execution-model.md  0002-storage-strategy.md  0003-instance-provisioning-model.md  0004-region-selection.md  0005-machine-type.md  0006-cloud-vs-local-execution.md  0007-infrastructure-management-approach.md  0008-agent-agnostic-design.md  0009-api-key-management.md  0010-cloud-agnostic-design.md  0011-tui-implementation-approach.md  0012-dynamic-ip-firewall.md  0013-ssh-remote-execution.md  README.md
sandbox-setup-template/docker/: Dockerfile  Dockerfile.base  build-and-push.sh  entrypoint.sh
sandbox-setup-template/docs/: COST-OPTIMIZATION.md  DEVELOPMENT-ENVIRONMENT.md  REPO-MATURITY-PATTERNS.md  (+6 more)
scripts/: find-free-port.sh  pubsub-emulator.sh  run-contract-tests.sh
services/: README.md  services-discord-bot.yaml
services/cpp-drogon/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  main.cc
services/python-django/: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml  requirements.txt  ruff.toml
services/python-django/discord_webhook/: __init__.py  settings.py  urls.py  views.py  wsgi.py
services/python-flask/: .gitignore  Dockerfile  app.py  pyproject.toml  requirements.txt  ruff.toml
services/rust-actix/: .gitignore  Cargo.toml  Dockerfile
services/rust-actix/src/: main.rs
tests/: validate-services-yaml.sh
(+227 files in other folders)
