[project]
name = "discord-webhook-django"
version = "1.0.0"
description = "Discord webhook service using Django"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1,<6.0",
    "gunicorn==24.1.1",
    "pynacl==1.6.2",
    "google-cloud-pubsub==2.34.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
