[project]
name = "discord-webhook-flask"
version = "1.0.0"
description = "Discord webhook service using Flask"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.2",
    "gunicorn==25.1.0",
    "pynacl==1.6.2",
    "google-cloud-pubsub==2.35.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.format]
quote-style = "double"
