[package]
name = "discord-webhook-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
chrono = "0.4"

[profile.release]
lto = true
strip = true
